--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "merge": "^1.2.1",
     "react": "^16.7.0",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-scripts": "^2.1.3",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
